--- a/AnalysisReport.Rmd
+++ b/AnalysisReport.Rmd
@@ -193,3 +193,17 @@ ggplot(dfSummary, aes(x=accPerc,y=Frustration, colour=Level)) + geom_point() + g
 cor.test(dfSummary$accPerc, dfSummary$Proprioception, method="spearman")
 
 ```
+
+
+```{r CounterBalacing mood test}
+participants <- dfSummary %>% filter(orderNumber == 1)
+firstgroup <- participants %>% filter(Level=="Body")
+secondgroup <- participants %>% filter(Level=="Blocks")
+questionNo <- array(1:13)
+for (i in questionNo){
+  cat(print(firstgroup[9+i]))
+  firstgroup[9+i]
+  secondgroup[9+i]
+ #wilcox.test(firstgroup[9+i], secondgroup[9+i], paired = FALSE, exact = FALSE)
+}
+```
