--- a/AnalysisReport.Rmd
+++ b/AnalysisReport.Rmd
@@ -196,11 +196,11 @@ cor.test(dfSummary$accPerc, dfSummary$Proprioception, method="spearman")
 
 
 ```{r Counter-balancing mood test}
-ParticipantOrder1 <- dfSummary %>% filter(orderNumber == 1)
-Body1 <- ParticipantOrder1 %>% filter(Level=="Body")
-Blocks1 <- ParticipantOrder1 %>% filter(Level=="Blocks")
-
-# We are very sorry about this
+ ParticipantOrder1 <- dfSummary %>% filter(orderNumber == 1)
+ Body1 <- ParticipantOrder1 %>% filter(Level=="Body")
+ Blocks1 <- ParticipantOrder1 %>% filter(Level=="Blocks")
+  
+# We are very sorry about this - :-) yes, that hurs ;-) and pairing is not correct iirc
 # wilcox.test(Body1$Q1, Blocks1$Q1, paired = TRUE, exact = FALSE, SIMPLIFY = FALSE)
 # wilcox.test(Body1$Q2, Blocks1$Q2, paired = TRUE, exact = FALSE, SIMPLIFY = FALSE)
 # wilcox.test(Body1$Q3, Blocks1$Q3, paired = TRUE, exact = FALSE, SIMPLIFY = FALSE)
@@ -215,16 +215,26 @@ Blocks1 <- ParticipantOrder1 %>% filter(Level=="Blocks")
 # wilcox.test(Body1$Q12, Blocks1$Q12, paired = TRUE, exact = FALSE, SIMPLIFY = FALSE)
 # wilcox.test(Body1$Q13, Blocks1$Q13, paired = TRUE, exact = FALSE, SIMPLIFY = FALSE)
 
+ dfSummary %>%
+  select(Participant, orderNumber,Level, Q1:Q13) %>%
+  pivot_longer(cols = -c(Level, Participant,orderNumber)) %>%
+  filter(orderNumber==1) %>% 
+  group_by(name) %>% 
+  summarise(p=wilcox.test(value~Level,paired=FALSE,exact=FALSE)$p.value) %>%View()
+# I don't think you can pair your wilcox test because each person only contributes 1 rating for first experience
+ 
 ```
 
 ```{r Counter-balancing levels and performance}
 wilcox.test(Body1$accPerc, Blocks1$accPerc, paired = TRUE, exact = FALSE, SIMPLIFY = FALSE)
+# not sure why you use wilcoxon it's a continuous variable, cand you cannot pair here either
+t.test(Body1$accPerc, Blocks1$accPerc)
 ParticipantOrder2 <- dfSummary %>% filter(orderNumber == 2)
 Body2 <- ParticipantOrder2 %>% filter(Level=="Body")
 Block2 <- ParticipantOrder2 %>% filter(Level=="Blocks")
 
 wilcox.test(Body2$accPerc, Block2$accPerc, paired = TRUE, exact = FALSE, SIMPLIFY = FALSE)
-
+t.test(Body2$accPerc, Block2$accPerc)
 ```
 
 ```{r Correlation test for SoO on all measurements}
