--- a/AnalysisReport.Rmd
+++ b/AnalysisReport.Rmd
@@ -239,7 +239,7 @@ qplot(Blocks1$accPerc,
 SWTestBody1 <- shapiro.test(Body1$accPerc)
 SWTestBlocks1 <- shapiro.test(Blocks1$accPerc)
 #homogeneity of variance
-leveneTestorder1 <- leveneTest(ParticipantOrder1$accPerc,group = ParticipantOrder1$Level, center = "median", data = ParticipantOrder1)
+#leveneTestorder1 <- leveneTest(ParticipantOrder1$accPerc,group = ParticipantOrder1$Level, center = "median", data = ParticipantOrder1)
 #T test Welch's t-test (Does not require variance check)
 t.test(Body1$accPerc, Blocks1$accPerc)
 
@@ -253,7 +253,7 @@ qplot(Body2$accPerc,
       main = "Performance as Percentages in Body 2", 
       xlab = "Body performance")
 
-qplot(Body2$accPerc,
+qplot(Blocks2$accPerc,
       geom="histogram",
       bins = 50,
       xlim = c(0, 1),
@@ -268,7 +268,7 @@ Blocks2 <- ParticipantOrder2 %>% filter(Level=="Blocks")
 SWTestBody2 <- shapiro.test(Body2$accPerc)
 SWTestBlocks2 <- shapiro.test(Blocks2$accPerc)
 #homogeneity of variance
-leveneTestorder2 <- leveneTest(ParticipantOrder2$accPerc,group = ParticipantOrder2$Level, center = "median", data = ParticipantOrder2)
+#leveneTestorder2 <- leveneTest(ParticipantOrder2$accPerc,group = ParticipantOrder2$Level, center = "median", data = ParticipantOrder2)
 #T test Welch's t-test (Does not require variance check)
 t.test(Body2$accPerc, Blocks2$accPerc)
 ```
@@ -292,7 +292,7 @@ cor.test(ParticipantOrder2$SoO, ParticipantOrder2$Frustration, method="spearman"
 
 ```
 
-```{r Correlation test for SoA all measurements}
+```{r Correlation test for SoO all measurements}
 #correlation test on SoA
 cor.test(dfSummary$SoO, dfSummary$SoA, method="spearman", exact = FALSE)
 ggplot(dfSummary,aes(x=SoO,y=SoA, colour=Level),main = "Correlation between SoO and SoA. No significant relation")+ geom_point() + expand_limits(x=c(1,7), y=c(1, 7)) + geom_smooth(method = "lm", fill = NA)
@@ -318,4 +318,8 @@ ggplot(dfSummary,aes(x=SoA,y=Proprioception, colour=Level),main = "Correlation b
 #correlation test on Proprioception and Frustration
 cor.test(dfSummary$Proprioception, dfSummary$Frustration, method="spearman", exact = FALSE)
 ggplot(dfSummary,aes(x=Proprioception,y=Frustration, colour=Level),main = "Correlation between Proprioception and Frustration No significant relation")+ geom_point() + expand_limits(x=c(1,7), y=c(1, 7)) + geom_smooth(method = "lm", fill = NA)
+```
+
+```{r Correlation test for Performance on SoO, SoA, Frustration and Proprioception}
+
 ```
